--- a/styles/atom-sync.less
+++ b/styles/atom-sync.less
@@ -6,10 +6,10 @@
 
 @font-face {
     font-family: 'Octicons';
-    src: url('atom://atom-sync/static/octicons.ttf');
+    src: url('atom://atom-sync-cygwin/static/octicons.ttf');
 }
 
-.atom-sync {
+.atom-sync-cygwin {
     .header {
         background: @panel-heading-background-color;
         border: solid 1px;
